--- a/Jellyfin.Plugin.HappyMovie/Configuration/configPage.html
+++ b/Jellyfin.Plugin.HappyMovie/Configuration/configPage.html
@@ -24,6 +24,22 @@
                 Api key to access the movie db.
               </div>
             </div>
+            <div class="selectContainer">
+              <label class="selectLabel" for="Type">Several Options</label>
+              <select
+                is="emby-select"
+                id="Type"
+                name="Type"
+                class="emby-select-withcolor emby-select"
+              >
+                <option id="NON_PROXY" value="NON_PROXY">NON_PROXY</option>
+                <option id="HTTP" value="HTTP">HTTP</option>
+              </select>
+
+              <div class="fieldDescription">
+                Choose your proxy type, default is NONE_PROXY
+              </div>
+            </div>
             <div class="inputContainer">
               <label class="inputeLabel inputLabelUnfocused" for="ProxyHost"
                 >Proxy Host</label
@@ -35,6 +51,18 @@
                 is="emby-input"
               />
               <div class="fieldDescription">Proxy server host</div>
+            </div>
+            <div class="inputContainer">
+              <label class="inputeLabel inputLabelUnfocused" for="ProxyPort"
+                >Proxy Port</label
+              >
+              <input
+                id="ProxyPort"
+                name="ProxyPort"
+                type="text"
+                is="emby-input"
+              />
+              <div class="fieldDescription">Proxy server port</div>
             </div>
             <div>
               <button
@@ -63,6 +91,8 @@
             ).then(function (config) {
               document.querySelector("#ApiKey").value = config.ApiKey;
               document.querySelector("#ProxyHost").value = config.ProxyHost;
+              document.querySelector("#ProxyPort").value = config.ProxyPort;
+              document.querySelector("#Type").value = config.Type;
               Dashboard.hideLoadingMsg();
             });
           });
@@ -75,6 +105,8 @@
           ).then(function (config) {
             config.ApiKey = document.querySelector("#ApiKey").value;
             config.ProxyHost = document.querySelector("#ProxyHost").value;
+            config.ProxyPort = document.querySelector("#ProxyPort").value;
+            config.Type = document.querySelector("#Type").value;
 
             ApiClient.updatePluginConfiguration(
               HappyMovieConfig.pluginUniqueId,
