--- a/Jellyfin.Plugin.HappyMovie/Configuration/configPage.html
+++ b/Jellyfin.Plugin.HappyMovie/Configuration/configPage.html
@@ -34,6 +34,7 @@
               >
                 <option id="NON_PROXY" value="NON_PROXY">NON_PROXY</option>
                 <option id="HTTP" value="HTTP">HTTP</option>
+                <option id="SOCKS5" value="SOCKS5">SOCKS5</option>
               </select>
 
               <div class="fieldDescription">
